Simulations fixed, updated project structure, fixed bugs